All changes added.